<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.technotracks.ui.RegistrationActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textCapWords"
        android:hint="@string/txtLastname" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textCapWords"
        android:hint="@string/txtFirstname" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/txtUsername" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/txtEmail" />

    <CheckBox
        android:id="@+id/checkBoxLeaderboards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText4"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="20dp"
        android:text="@string/leaderboards" />

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxLeaderboards"
        android:layout_below="@+id/checkBoxLeaderboards"
        android:layout_marginTop="24dp"
        android:text="@string/btnContinue" />

    <ImageView
        android:id="@+id/helpRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/checkBoxLeaderboards"
        android:layout_toRightOf="@+id/checkBoxLeaderboards"
        android:src="@android:drawable/ic_menu_help"
        android:contentDescription="Question mark" />

</RelativeLayout>
